syntax = "proto3";

package api;

service Fortunes {
    rpc GetFortunes(GetFortunesRequest) returns (GetFortunesResponse);
}

message GetFortunesRequest {
}

message GetFortunesResponse {
    repeated Fortune fortunes = 1;
}

message Fortune {
    uint32 id = 1;
    string message = 2;
}